--- a/src/components/form/RadioButton.module.css
+++ b/src/components/form/RadioButton.module.css
@@ -1,3 +1,5 @@
+@import '@digdir/design-system-tokens/brand/digdir/tokens.css';
+
 .cardLabel {
   position: absolute;
   width: 100%;
@@ -5,6 +7,7 @@
   left: 0;
   top: 0;
   cursor: pointer;
+  z-index: -1;
 }
 
 .card label:focus-within {
@@ -18,10 +21,12 @@
   padding: var(--fds-spacing-3);
   position: relative;
   display: flex;
+  z-index: 0;
 }
 
 .card:focus-within {
   --fds-focus-border-width: 3px;
+  background: var(--fds-semantic-surface-neutral-selected);
 
   box-shadow: 0 0 0 var(--fds-focus-border-width) var(--fds-inner-focus-border-color);
   outline: var(--fds-focus-border-width) solid var(--fds-outer-focus-border-color);
