Implementing a 10 item evaluation history/log, for comparing evaluated expressions with previous runs

--- a/src/features/devtools/components/ExpressionPlayground/ExpressionPlayground.module.css
+++ b/src/features/devtools/components/ExpressionPlayground/ExpressionPlayground.module.css
@@ -30,3 +30,9 @@
   background-color: white;
   height: 100%;
 }
+
+.outputs,
+.outputs > div,
+.outputs > div > div:not([role='tablist']) {
+  height: 100%;
+}
