--- a/src/layout/LikertItem/LikertItemComponent.module.css
+++ b/src/layout/LikertItem/LikertItemComponent.module.css
@@ -12,10 +12,13 @@ Altinn, and making sure they are consistent. */
 }
 
 .likertTable th {
-  background-color: #f5f5f5;
   border-bottom: 1px solid #dde3e5;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.likertTable thead th {
+  background-color: #f5f5f5;
 }
 
 .likertTable tr:not(:last-of-type) td {
@@ -34,7 +37,7 @@ Altinn, and making sure they are consistent. */
 
 /* ==== */
 
-.likertTableHeaderCell:not(:first-of-type) {
+.likertTable thead th:not(:first-of-type) {
   width: 100px;
   text-align: center;
   box-sizing: border-box;
