--- a/src/layout/RepeatingGroup/Table/RepeatingGroup.module.css
+++ b/src/layout/RepeatingGroup/Table/RepeatingGroup.module.css
@@ -231,3 +231,54 @@ table > tbody > tr.editingRow:hover {
   padding-left: var(--modal-padding-x);
   padding-right: var(--modal-padding-x);
 }
+
+.responsiveTable {
+  display: block;
+}
+
+.responsiveTable thead {
+  display: none;
+}
+
+.responsiveTable th {
+  display: block;
+  border: none;
+}
+
+.responsiveTable tbody,
+.responsiveTable tr {
+  display: block;
+}
+
+.responsiveTable td {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: var(--fds-spacing-2) var(--modal-padding-x);
+  width: unset;
+}
+
+.responsiveTable td .contentWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+
+.responsiveTable tbody:last-child tr:last-child {
+  border-bottom: none;
+}
+
+.responsiveTable tr {
+  border-bottom: 2px solid var(--fds-semantic-border-neutral-default);
+  padding-top: var(--fds-spacing-3);
+  padding-bottom: var(--fds-spacing-3);
+}
+
+.responsiveTable td[data-header-title]:not([data-header-title=''])::before,
+.responsiveTable th[data-header-title]:not([data-header-title=''])::before {
+  content: attr(data-header-title);
+  display: block;
+  text-align: left;
+  font-weight: 500;
+}
