--- a/src/layout/LikertItem/LikertItemComponent.module.css
+++ b/src/layout/LikertItem/LikertItemComponent.module.css
@@ -45,6 +45,12 @@ Altinn, and making sure they are consistent. */
   justify-content: center;
 }
 
+.likertMobileLabel {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: var(--fds-spacing-2);
+}
+
 .likertMobileGroup {
   gap: 12px;
   display: flex;
