--- a/src/layout/Datepicker/Calendar.module.css
+++ b/src/layout/Datepicker/Calendar.module.css
@@ -1,3 +1,27 @@
+.datepickerLabelWrapper span[id*='description-'] {
+  margin-bottom: 0;
+}
+.calendarGrid {
+  gap: var(--fds-spacing-2);
+  display: flex;
+  flex-direction: column;
+  margin-bottom: var(--fds-spacing-2);
+}
+
+.formatText {
+  word-break: break-word;
+  line-height: 1.5rem;
+  display: inline-block;
+  font-weight: normal;
+}
+
+.calendarButton {
+  background-color: white;
+}
+.calendarButton:hover {
+  background-color: var(--fd);
+}
+
 .selectedDate {
   background-color: var(--fds-colors-blue-900);
   color: white;
@@ -60,9 +84,24 @@
   display: flex;
   border-radius: 4px;
   border: var(--fds-border_width-default, 1px) solid var(--fds-semantic-border-neutral-default);
+  gap: var(--fds-spacing-1);
+  background: white;
 }
-.calendarInput input,
+.calendarInputWrapper:hover {
+  box-shadow: inset 0 0 0 1px var(--fds-semantic-border-input-hover);
+}
+.calendarInput {
+  padding: 1px;
+}
+.calendarInputWrapper button {
+  width: 48px;
+  height: 48px;
+}
+.calendarInput input:not(:focus-visible),
 .calendarInput button {
   border: none;
   background: white;
+}
+.calendarInput input:not(:focus-visible):hover {
+  box-shadow: none;
 }
