--- a/src/layout/Datepicker/Calendar.module.css
+++ b/src/layout/Datepicker/Calendar.module.css
@@ -18,9 +18,6 @@
 .calendarButton {
   background-color: white;
 }
-.calendarButton:hover {
-  background-color: var(--fd);
-}
 
 .selectedDate {
   background-color: var(--fds-colors-blue-900);
@@ -62,7 +59,7 @@
   height: 48px;
   text-align: center;
   opacity: 0.75;
-  padding: 0.5rem 0rem;
+  padding: 0.5rem 0;
   font: inherit;
   font-weight: 500;
 }
@@ -78,6 +75,12 @@
 .monthWrapper {
   display: flex;
   flex-direction: column;
+  gap: var(--fds-spacing-2);
+}
+.dropdownCaption {
+  display: flex;
+  margin-bottom: 10px;
+  gap: 4px;
 }
 
 .calendarInputWrapper {
@@ -93,9 +96,13 @@
 .calendarInput {
   padding: 1px;
 }
+.calendarInput,
+.calendarInput * {
+  height: 36px;
+}
 .calendarInputWrapper button {
-  width: 48px;
-  height: 48px;
+  min-height: 38px;
+  min-width: 38px;
 }
 .calendarInput input:not(:focus-visible),
 .calendarInput button {
