--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -36,8 +36,17 @@
   margin-left: var(--fds-spacing-3);
 }
 
+.noFieldsetPanel {
+  padding-left: calc(var(--panel-x-padding) - var(--fds-spacing-3));
+  padding-right: calc(var(--panel-x-padding) - var(--fds-spacing-3));
+}
+
 .groupingIndicator {
   border-left: 2px solid #949494;
   margin-left: 0;
   padding: var(--fds-spacing-3) 0 var(--fds-spacing-3) var(--fds-spacing-3);
+}
+
+.noFieldsetGroupingIndicator {
+  margin-left: var(--fds-spacing-3);
 }
