--- a/src/layout/Datepicker/Calendar.module.css
+++ b/src/layout/Datepicker/Calendar.module.css
@@ -25,10 +25,12 @@
   font-weight: normal;
   border-radius: var(--fds-border_radius-medium);
 }
+.selectedDate button {
+  color: white;
+}
 .disabledDate {
   border-radius: var(--fds-border_radius-medium);
   background: var(--fds-colors-grey-100);
-
   cursor: not-allowed;
 }
 .disabledDate button {
@@ -63,6 +65,10 @@
   font: inherit;
   font-weight: 500;
 }
+.calendarDay:hover {
+  border-radius: var(--fds-border_radius-medium);
+  background: var(--fds-colors-blue-200);
+}
 .calendarDay {
   width: 48px;
   height: 48px;
@@ -71,6 +77,8 @@
 .calendarDayButton {
   height: 46px;
   width: 46px;
+  background: transparent;
+  border: none;
 }
 .monthWrapper {
   display: flex;
