--- a/src/app-components/table/Table.module.css
+++ b/src/app-components/table/Table.module.css
@@ -44,14 +44,22 @@
   width: 100%;
 }
 
-.mobileTable tbody:last-child tr:last-child {
-  border-bottom: none;
+.mobileTable tbody tr:last-child {
+  border-bottom: 2px solid var(--fds-semantic-border-neutral-default);
+}
+
+.mobileTable tbody tr:first-child {
+  border-top: 2px solid var(--fds-semantic-border-neutral-default);
 }
 
 .mobileTable tr {
-  border-bottom: 2px solid var(--fds-semantic-border-neutral-default);
+  border-bottom: 1px solid var(--fds-semantic-border-neutral-default);
   padding-top: var(--fds-spacing-3);
   padding-bottom: var(--fds-spacing-3);
+}
+
+.mobileTable tr:hover td {
+  background-color: unset;
 }
 
 .mobileTable td[data-header-title]:not([data-header-title=''])::before,
@@ -60,6 +68,10 @@
   display: block;
   text-align: left;
   font-weight: 500;
+}
+
+.mobileTable td .buttonContainer {
+  justify-content: start;
 }
 
 .visuallyHidden {
