--- a/src/layout/Likert/Summary2/LikertSummary.module.css
+++ b/src/layout/Likert/Summary2/LikertSummary.module.css
@@ -7,7 +7,7 @@
 .summaryItemWrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-6);
+  gap: var(--ds-spacing-6);
 }
 
 .editButton {
