--- a/src/components/form/RadioButton.module.css
+++ b/src/components/form/RadioButton.module.css
@@ -1,6 +1,6 @@
 .radioLabelContainer {
   display: flex;
-  gap: var(--fds-spacing-1);
+  gap: var(--ds-spacing-1);
   align-items: center;
 }
 
@@ -10,10 +10,10 @@
 
 .card {
   border-radius: 6px;
-  background-color: var(--fds-semantic-background-subtle);
+  background-color: var(--ds-semantic-background-subtle);
   width: 100%;
-  padding: var(--fds-spacing-2);
-  margin-bottom: var(--fds-spacing-3);
+  padding: var(--ds-spacing-2);
+  margin-bottom: var(--ds-spacing-3);
   cursor: pointer;
 }
 
@@ -22,23 +22,23 @@
 }
 
 .card:hover {
-  background: var(--fds-semantic-surface-neutral-subtle-hover);
+  background: var(--ds-semantic-surface-neutral-subtle-hover);
 }
 
 .card:active {
-  background: var(--fds-semantic-border-neutral-subtle);
+  background: var(--ds-semantic-border-neutral-subtle);
 }
 
 .card:is(:checked, :has(:checked)) {
-  background: var(--fds-semantic-surface-neutral-selected);
-  box-shadow: 0 0 0 var(--fds-focus-border-width) var(--fds-semantic-border-first-active);
+  background: var(--ds-semantic-surface-neutral-selected);
+  box-shadow: 0 0 0 var(--ds-focus-border-width) var(--ds-semantic-border-first-active);
 }
 
 .card:has(:focus-visible) {
-  --fds-focus-border-width: 3px;
-  background: var(--fds-semantic-surface-neutral-selected);
+  --ds-focus-border-width: 3px;
+  background: var(--ds-semantic-surface-neutral-selected);
 
-  box-shadow: 0 0 0 var(--fds-focus-border-width) var(--fds-inner-focus-border-color);
-  outline: var(--fds-focus-border-width) solid var(--fds-outer-focus-border-color);
-  outline-offset: var(--fds-focus-border-width);
+  box-shadow: 0 0 0 var(--ds-focus-border-width) var(--ds-inner-focus-border-color);
+  outline: var(--ds-focus-border-width) solid var(--ds-outer-focus-border-color);
+  outline-offset: var(--ds-focus-border-width);
 }
