--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,9 @@
   --repeating-group-error-color: var(--colors-red-200);
 
   /* Focus styles */
-  --fds-inner-focus-border-color: #1e2b3c;
-  --fds-outer-focus-border-color: #fadf4b;
-  --fds-focus-border-width: 3px;
+  --ds-inner-focus-border-color: #1e2b3c;
+  --ds-outer-focus-border-color: #fadf4b;
+  --ds-focus-border-width: 3px;
 
   /*Border styles*/
   --border-color-primary: #008fd6;
@@ -55,16 +55,16 @@
   --button-gap: 0.75rem;
 
   /* Toast styles */
-  --toastify-color-info: var(--fds-semantic-surface-action-primary-default);
-  --toastify-color-success: var(--fds-semantic-surface-success-default);
-  --toastify-color-warning: var(--fds-semantic-surface-warning-default);
-  --toastify-color-error: var(--fds-semantic-surface-danger-default);
+  --toastify-color-info: var(--ds-semantic-surface-action-primary-default);
+  --toastify-color-success: var(--ds-semantic-surface-success-default);
+  --toastify-color-warning: var(--ds-semantic-surface-warning-default);
+  --toastify-color-error: var(--ds-semantic-surface-danger-default);
   --toastify-toast-width: 400px;
 }
 
 .Toastify__toast {
   line-height: 1.5rem;
-  padding: var(--fds-spacing-3) var(--fds-spacing-3) var(--fds-spacing-4) var(--fds-spacing-3);
+  padding: var(--ds-spacing-3) var(--ds-spacing-3) var(--ds-spacing-4) var(--ds-spacing-3);
 }
 
 @media only screen and (min-width: 768px) {
