--- a/src/layout/Checkboxes/CheckboxesSummary.module.css
+++ b/src/layout/Checkboxes/CheckboxesSummary.module.css
@@ -5,7 +5,7 @@
 .labelValueWrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-2);
+  gap: var(--ds-spacing-2);
 }
 
 .checkboxSummaryItem {
