--- a/src/layout/Input/InputComponent.module.css
+++ b/src/layout/Input/InputComponent.module.css
@@ -14,14 +14,14 @@
 }
 
 .text-padding {
-  padding: 0 var(--fds-spacing-2);
+  padding: 0 var(--ds-spacing-2);
   line-height: 32px;
 }
 
 .focusable:focus-visible {
-  --fds-focus-border-width: 3px;
-  outline: var(--fds-focus-border-width) solid var(--fds-semantic-border-focus-outline);
-  outline-offset: var(--fds-focus-border-width);
-  box-shadow: 0 0 0 var(--fds-focus-border-width) var(--fds-semantic-border-focus-boxshadow);
-  border-radius: var(--fds-border_radius-medium);
+  --ds-focus-border-width: 3px;
+  outline: var(--ds-focus-border-width) solid var(--ds-semantic-border-focus-outline);
+  outline-offset: var(--ds-focus-border-width);
+  box-shadow: 0 0 0 var(--ds-focus-border-width) var(--ds-semantic-border-focus-boxshadow);
+  border-radius: var(--ds-border-radius-md);
 }
