--- a/src/layout/Payment/PaymentComponent.module.css
+++ b/src/layout/Payment/PaymentComponent.module.css
@@ -1,16 +1,16 @@
 .buttonContainer {
   display: flex;
-  gap: var(--fds-spacing-3);
+  gap: var(--ds-spacing-3);
 }
 
 .alertContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-3);
+  gap: var(--ds-spacing-3);
 }
 
 .paymentContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-6);
+  gap: var(--ds-spacing-6);
 }
