--- a/src/layout/RepeatingGroup/Summary2/RepeatingGroupSummary.module.css
+++ b/src/layout/RepeatingGroup/Summary2/RepeatingGroupSummary.module.css
@@ -1,37 +1,37 @@
 .summaryWrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-6);
+  gap: var(--ds-spacing-6);
 }
 
 .contentWrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-8);
+  gap: var(--ds-spacing-8);
 }
 
 .rowDivider {
-  height: var(--fds-border_width-active);
+  height: var(--ds-border_width-active);
   border: none;
-  background-color: var(--fds-semantic-border-neutral-default);
+  background-color: var(--ds-color-neutral-border-default);
   margin: 0;
 }
 
 .nestedSummaryWrapper {
   display: flex;
-  gap: var(--fds-spacing-3);
+  gap: var(--ds-spacing-3);
   flex-direction: column;
 }
 
 .nestedContentWrapper {
-  border: dashed 1px var(--fds-semantic-border-neutral-default);
-  padding: var(--fds-spacing-2) var(--fds-spacing-4);
-  border-radius: var(--fds-border_radius-medium);
+  border: dashed 1px var(--ds-color-neutral-border-default);
+  padding: var(--ds-spacing-2) var(--ds-spacing-4);
+  border-radius: var(--ds-border-radius-md);
 }
 
 .errorMessage {
   display: flex;
   flex-direction: row;
-  gap: var(--fds-spacing-2);
+  gap: var(--ds-spacing-2);
   align-items: center;
 }
