--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -1,6 +1,6 @@
 /* Focus utility class */
 .focusable:focus-within {
-  outline: var(--fds-focus-border-width) solid var(--fds-outer-focus-border-color);
-  outline-offset: var(--fds-focus-border-width);
-  box-shadow: 0 0 0 var(--fds-focus-border-width) var(--fds-inner-focus-border-color);
+  outline: var(--ds-focus-border-width) solid var(--ds-outer-focus-border-color);
+  outline-offset: var(--ds-focus-border-width);
+  box-shadow: 0 0 0 var(--ds-focus-border-width) var(--ds-inner-focus-border-color);
 }
