--- a/src/app-components/Input/Input.module.css
+++ b/src/app-components/Input/Input.module.css
@@ -4,3 +4,16 @@ input[type='search'] {
   background-repeat: no-repeat;
   padding-right: calc(1.5rem + 10px * 2);
 }
+
+.text-padding {
+  padding: 0 var(--fds-spacing-2);
+  line-height: 32px;
+}
+
+.focusable:focus-visible {
+  --fds-focus-border-width: 3px;
+  outline: var(--fds-focus-border-width) solid var(--fds-semantic-border-focus-outline);
+  outline-offset: var(--fds-focus-border-width);
+  box-shadow: 0 0 0 var(--fds-focus-border-width) var(--fds-semantic-border-focus-boxshadow);
+  border-radius: var(--fds-border_radius-medium);
+}
