--- a/src/layout/PersonLookup/PersonLookupComponent.module.css
+++ b/src/layout/PersonLookup/PersonLookupComponent.module.css
@@ -1,7 +1,7 @@
 /* breakpoints-xs */
 @media only screen and (min-width: 0) {
   .componentWrapper {
-    grid-template-areas: 'ssnLabel' 'ssn' 'nameLabel' 'name' 'submit';
+    grid-template-areas: 'ssnLabel' 'ssn' 'nameLabel' 'name' 'submit' 'apiError';
     gap: var(--fds-spacing-2);
   }
 }
@@ -10,7 +10,7 @@
 @media only screen and (min-width: 840px) {
   .componentWrapper {
     grid-template-columns: repeat(2, minmax(250px, 250px)) auto;
-    grid-template-areas: 'ssnLabel nameLabel .' 'ssn name submit';
+    grid-template-areas: 'ssnLabel nameLabel .' 'ssn name submit' 'apiError apiError .';
     align-items: end;
     column-gap: var(--fds-spacing-2);
   }
