--- a/src/layout/List/ListComponent.module.css
+++ b/src/layout/List/ListComponent.module.css
@@ -41,6 +41,7 @@
   justify-content: end;
   align-items: center;
   background-color: var(--fds-colors-grey-100);
+  width: 100%;
 }
 
 .paginationMobile {
