fixes more styling

--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -1,6 +1,9 @@
 .label {
-  padding-bottom: var(--fds-spacing-2);
   display: flex;
   gap: var(--fds-spacing-1);
   align-items: center;
+}
+
+.bottomPadding {
+  padding-bottom: var(--fds-spacing-2);
 }
