--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -2,8 +2,9 @@
   display: flex;
   gap: var(--fds-spacing-2);
   align-items: center;
+  padding-bottom: var(--fds-spacing-1);
 }
 
-.bottomPadding {
+.description {
   padding-bottom: var(--fds-spacing-2);
 }
