moves structure to label component

--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -2,9 +2,15 @@
   display: flex;
   gap: var(--fds-spacing-2);
   align-items: center;
-  padding-bottom: var(--fds-spacing-1);
 }
 
 .description {
   padding-bottom: var(--fds-spacing-2);
+}
+
+.labelAndDescWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--fds-spacing-1);
+  align-items: flex-start;
 }
