--- a/src/features/navigation/AppNavigation.module.css
+++ b/src/features/navigation/AppNavigation.module.css
@@ -1,12 +1,16 @@
 .sidebar-container {
+  --max-sidebar-width: 320px;
+
   position: absolute;
   margin-top: 54px;
-  padding: 0 1rem;
+  padding: 0 14px;
   box-sizing: border-box;
 
-  /* This is highly dependent on the width of the page, see src/index.css */
+  /* This is highly dependent on the width of the page, and only works for large screen sizes, see src/index.css */
   width: calc(50% - var(--page-max-width) / 2);
-  max-width: 300px;
+  max-width: var(--max-sidebar-width);
+
+  margin-left: max(calc(50% - var(--page-max-width) / 2 - var(--max-sidebar-width)), 0px);
 }
 
 .navigation-header {
@@ -16,7 +20,7 @@
 
 .group-list {
   list-style-type: none;
-  padding: 0 0 0 1rem;
+  padding: 0 2px;
   margin: 0;
 }
 
@@ -26,7 +30,7 @@
 
 .group-button {
   font-family: var(--font-family);
-  font-size: 1rem;
+  font-size: 14px;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -49,8 +53,9 @@
 }
 
 .group-chevron {
+  margin-right: -4px; /* The icon has some internal padding, this makes the edge line up better */
   color: var(--fds-colors-grey-700);
-  font-size: 1.25rem;
+  font-size: 16px;
 }
 
 .group-chevron-open {
@@ -58,11 +63,11 @@
 }
 
 .group-symbol {
-  width: 36px;
-  height: 36px;
+  width: 28px;
+  height: 28px;
   box-sizing: border-box;
-  font-size: 24px;
-  border-width: 2px;
+  font-size: 18px;
+  border-width: 1px;
   border-style: solid;
   border-radius: var(--fds-border_radius-interactive);
   display: flex;
@@ -104,7 +109,7 @@
 
 .page-button {
   font-family: var(--font-family);
-  font-size: 1rem;
+  font-size: 14px;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -123,11 +128,11 @@
 
 .page-symbol {
   position: relative;
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   margin: 0 4px;
   box-sizing: border-box;
-  border-width: 2px;
+  border-width: 1px;
   border-style: solid;
   border-radius: 50%;
   display: flex;
@@ -139,10 +144,10 @@
   content: '';
   position: absolute;
   box-sizing: border-box;
-  height: 12px;
+  height: 14px;
   width: 0;
-  border-left: 2px solid var(--fds-colors-grey-700);
-  bottom: 28px;
+  border-left: 1px solid var(--fds-colors-grey-700);
+  bottom: 20px;
 }
 .page-list > li:not(:last-child) .page-symbol::after {
   content: '';
@@ -150,19 +155,19 @@
   box-sizing: border-box;
   height: 20px;
   width: 0;
-  border-left: 2px solid var(--fds-colors-grey-700);
-  top: 28px;
+  border-left: 1px solid var(--fds-colors-grey-700);
+  top: 20px;
 }
 
 .page-symbol-error {
-  font-size: 20px;
+  font-size: 16px;
   color: var(--fds-colors-red-700);
   border-color: var(--fds-colors-red-500);
   background-color: var(--fds-colors-red-100);
 }
 
 .page-symbol-complete {
-  font-size: 18px;
+  font-size: 14px;
   color: white;
   border-color: var(--fds-colors-blue-700);
   background-color: var(--fds-colors-blue-700);
