--- a/src/components/presentation/NavBar.module.css
+++ b/src/components/presentation/NavBar.module.css
@@ -14,8 +14,16 @@
   gap: 1rem;
 }
 
-.buttonMargin {
+.button-margin {
   margin-top: calc(2 * var(--fds-focus-border-width));
+}
+
+.inbox-button {
+  color: var(--fds-colors-blue-700);
+}
+
+.inbox-button svg {
+  margin-right: 8px;
 }
 
 @media only screen and (max-width: 1200px) {
