--- a/src/components/presentation/NavBar.module.css
+++ b/src/components/presentation/NavBar.module.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  justify-content: space-between;
   gap: 1rem;
 }
 
@@ -30,8 +31,11 @@
   margin-right: 4px;
 }
 
-@media only screen and (max-width: 1200px) {
-  button.hideExpandButtonMaxWidth {
-    display: none;
+.expand-width-button {
+  display: none;
+}
+@media only screen and (min-width: 1200px) {
+  .expand-width-button {
+    display: flex;
   }
 }
