--- a/src/layout/OrganisationLookup/OrganisationLookupComponent.module.css
+++ b/src/layout/OrganisationLookup/OrganisationLookupComponent.module.css
@@ -1,7 +1,12 @@
 /* breakpoints-xs */
 @media only screen and (min-width: 0) {
   .componentWrapper {
-    grid-template-areas: 'orgnrLabel' 'orgnr' 'submit' 'apiError';
+    grid-template-areas:
+      'orgnrLabel'
+      'orgnr'
+      'orgname'
+      'submit'
+      'apiError';
     gap: var(--fds-spacing-2);
   }
 }
@@ -10,7 +15,11 @@
 @media only screen and (min-width: 840px) {
   .componentWrapper {
     grid-template-columns: repeat(2, minmax(250px, 250px)) auto;
-    grid-template-areas: 'orgnrLabel .' 'orgnr submit' 'apiError .';
+    grid-template-areas:
+      'orgnrLabel .'
+      'orgnr submit'
+      'orgname .'
+      'apiError .';
     align-items: end;
     column-gap: var(--fds-spacing-2);
   }
@@ -26,6 +35,11 @@
 
   .orgnr {
     grid-area: orgnr;
+    align-self: start;
+  }
+
+  .orgname {
+    grid-area: orgname;
     align-self: start;
   }
 
