--- a/src/features/navigation/AppNavigation.module.css
+++ b/src/features/navigation/AppNavigation.module.css
@@ -61,7 +61,7 @@
   margin-left: 4px;
 }
 
-.navigation-header {
+.navigation-heading {
   font-weight: normal;
   margin-bottom: 1.5rem;
   display: flex;
