--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -1,6 +1,6 @@
 .group {
   width: 100%;
-  padding: var(--fds-spacing-3);
+  padding: 0 var(--fds-spacing-3);
 }
 
 .summary {
@@ -8,32 +8,15 @@
 }
 
 .groupContainer {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: var(--fds-spacing-9);
   margin-right: calc(var(--fds-spacing-3) * -1);
   margin-left: calc(var(--fds-spacing-3) * -1);
 }
 
 .groupContainer > * {
   padding: var(--fds-spacing-3);
-}
-
-.panel {
-  width: auto;
-  padding-left: var(--panel-x-padding);
-  padding-right: var(--panel-x-padding);
-  background-color: var(--component-panel-color-background-default);
-}
-
-.panel > legend {
-  padding-top: var(--fds-spacing-9);
-}
-
-.panelPadding > .panel {
-  --panel-x-padding: var(--modal-padding-x);
-  margin-right: var(--fds-spacing-3);
-  margin-left: var(--fds-spacing-3);
 }
 
 .noFieldset.panel {
