--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -26,10 +26,13 @@
 
 .groupingIndicator {
   border-left: 2px solid #949494;
-  margin-left: 0;
-  padding: var(--fds-spacing-3) 0 var(--fds-spacing-3) var(--fds-spacing-3);
+  padding: var(--fds-spacing-3) 0 var(--fds-spacing-3) 0;
 }
 
 .noFieldset.groupingIndicator {
   margin-left: var(--fds-spacing-3);
+}
+
+.paddingBottom {
+  padding-bottom: var(--fds-spacing-8);
 }
