--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -1,8 +1,3 @@
-.group {
-  width: 100%;
-  padding: 0 var(--fds-spacing-3);
-}
-
 .summary {
   width: 100%;
 }
@@ -19,20 +14,17 @@
   padding: var(--fds-spacing-3);
 }
 
-.noFieldset.panel {
-  padding-left: calc(var(--panel-x-padding) - var(--fds-spacing-3));
-  padding-right: calc(var(--panel-x-padding) - var(--fds-spacing-3));
-}
-
-.groupingIndicator {
+.indented {
   border-left: 2px solid #949494;
-  padding: var(--fds-spacing-3) 0 var(--fds-spacing-3) 0;
+  padding: var(--fds-spacing-3) 0 var(--fds-spacing-3) var(--fds-spacing-3);
+  margin-left: 0;
 }
 
-.noFieldset.groupingIndicator {
+.noFieldset.indented {
   margin-left: var(--fds-spacing-3);
 }
 
-.paddingBottom {
-  padding-bottom: var(--fds-spacing-8);
+.yPadding {
+  padding-top: var(--fds-spacing-4);
+  padding-bottom: var(--fds-spacing-9);
 }
