--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -6,25 +6,35 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin-right: calc(var(--fds-spacing-3) * -1);
-  margin-left: calc(var(--fds-spacing-3) * -1);
+  box-sizing: border-box;
 }
 
 .groupContainer > * {
   padding: var(--fds-spacing-3);
 }
 
-.indented {
-  border-left: 2px solid #949494;
-  padding: var(--fds-spacing-3) 0 var(--fds-spacing-3) var(--fds-spacing-3);
-  margin-left: 0;
+.groupContainer > :first-child {
+  padding-left: 0;
 }
 
-.noFieldset.indented {
+.groupContainer > :last-child {
+  padding-right: 0;
+}
+
+.groupContainer.indented {
+  border-left: 2px solid #949494;
+  padding-left: var(--fds-spacing-3);
+}
+
+.groupContainer.noFieldset.indented {
   margin-left: var(--fds-spacing-3);
 }
 
 .yPadding {
-  padding-top: var(--fds-spacing-2);
+  padding-top: var(--fds-spacing-1);
   padding-bottom: var(--fds-spacing-9);
+}
+
+.panel {
+  padding: var(--fds-spacing-3);
 }
