--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -1,40 +1,52 @@
+.group {
+  width: 100%;
+  padding: var(--fds-spacing-3);
+}
+
 .summary {
   width: 100%;
 }
 
 .groupContainer {
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  box-sizing: border-box;
+  padding-bottom: var(--fds-spacing-9);
+  margin-right: calc(var(--fds-spacing-3) * -1);
+  margin-left: calc(var(--fds-spacing-3) * -1);
 }
 
 .groupContainer > * {
   padding: var(--fds-spacing-3);
 }
 
-.groupContainer > :first-child {
-  padding-left: 0;
+.panel {
+  width: auto;
+  padding-left: var(--panel-x-padding);
+  padding-right: var(--panel-x-padding);
+  background-color: var(--component-panel-color-background-default);
 }
 
-.groupContainer > :last-child {
-  padding-right: 0;
+.panel > legend {
+  padding-top: var(--fds-spacing-9);
 }
 
-.groupContainer.indented {
-  border-left: 2px solid #949494;
-  padding-left: var(--fds-spacing-3);
-}
-
-.groupContainer.noFieldset.indented {
+.panelPadding > .panel {
+  --panel-x-padding: var(--modal-padding-x);
+  margin-right: var(--fds-spacing-3);
   margin-left: var(--fds-spacing-3);
 }
 
-.yPadding {
-  padding-top: var(--fds-spacing-1);
-  padding-bottom: var(--fds-spacing-9);
+.noFieldset.panel {
+  padding-left: calc(var(--panel-x-padding) - var(--fds-spacing-3));
+  padding-right: calc(var(--panel-x-padding) - var(--fds-spacing-3));
 }
 
-.panel {
-  padding: var(--fds-spacing-3);
+.indented {
+  border-left: 2px solid #949494;
+  margin-left: 0;
+  padding: var(--fds-spacing-3) var(--fds-spacing-6) var(--fds-spacing-3) var(--fds-spacing-3);
+}
+
+.noFieldset.indented {
+  margin-left: var(--fds-spacing-3);
 }
