adds padding to group legend and description and fixes summary test

--- a/src/layout/Group/GroupComponent.module.css
+++ b/src/layout/Group/GroupComponent.module.css
@@ -10,7 +10,8 @@
   width: 100%;
 }
 
-.groupWrapper.legend > * {
+.groupWrapper .legend,
+.groupWrapper .description {
   padding: 0 var(--fds-spacing-3);
 }
 
