--- a/src/layout/PersonLookup/PersonLookupSummary.module.css
+++ b/src/layout/PersonLookup/PersonLookupSummary.module.css
@@ -1,7 +1,23 @@
-.personLookupComponent {
+/* breakpoints-xs */
+@media only screen and (min-width: 0) {
+  .personLookupComponent {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+/* breakpoints-md */
+@media only screen and (min-width: 840px) {
+  .personLookupComponent {
+    flex-direction: row;
+  }
+}
+
+.personSummaryWrapper {
   display: flex;
-  flex-direction: row;
-  gap: 18px;
+  flex-direction: column;
+  gap: var(--fds-spacing-6);
   width: 100%;
 }
 
