--- a/src/layout/OrganisationLookup/OrganisationLookupSummary.module.css
+++ b/src/layout/OrganisationLookup/OrganisationLookupSummary.module.css
@@ -1,12 +1,29 @@
-.organisationLookupSummary {
+/* breakpoints-xs */
+@media only screen and (min-width: 0) {
+  .organisationLookupSummary {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+/* breakpoints-md */
+@media only screen and (min-width: 840px) {
+  .organisationLookupSummary {
+    flex-direction: row;
+  }
+}
+
+.organisationSummaryWrapper {
   display: flex;
-  flex-direction: row;
-  gap: var(--fds-spacing-2);
+  flex-direction: column;
+  gap: var(--fds-spacing-6);
   width: 100%;
 }
 
-.organisationLookupSummaryNr,
+.organisationLookupSummaryNr {
+  flex-grow: 5;
+}
 .organisationLookupSummaryName {
-  flex-grow: 1;
-  min-width: 0;
+  flex-grow: 4;
 }
