move styling to description

--- a/src/components/form/Description.module.css
+++ b/src/components/form/Description.module.css
@@ -1,7 +1,8 @@
 .description {
   word-break: break-word;
-  line-height: 1.5rem;
+  line-height: var(--fds-sizing-6);
   color: var(--semantic-text-neutral-subtle);
   display: inline-block;
   font-weight: normal;
+  font-size: var(--fds-sizing-4);
 }
