fixes caption helptext display

--- a/src/components/form/caption/Caption.module.css
+++ b/src/components/form/caption/Caption.module.css
@@ -12,3 +12,9 @@
 .description {
   padding-bottom: var(--fds-spacing-3);
 }
+
+.titleAndHelpWrapper {
+  display: flex;
+  gap: var(--fds-spacing-2);
+  align-items: center;
+}
