--- a/src/components/Flex.module.css
+++ b/src/components/Flex.module.css
@@ -1,5 +1,85 @@
+.container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
 .item {
   flex: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.spacing-1 {
+  width: calc(100% + 0.25rem);
+  margin: -0.125rem;
+}
+.spacing-2 {
+  width: calc(100% + 0.5rem);
+  margin: -0.25rem;
+}
+.spacing-3 {
+  width: calc(100% + 0.75rem);
+  margin: -0.375rem;
+}
+.spacing-4 {
+  width: calc(100% + 1rem);
+  margin: -0.5rem;
+}
+.spacing-5 {
+  width: calc(100% + 1.25rem);
+  margin: -0.625rem;
+}
+.spacing-6 {
+  width: calc(100% + 1.5rem);
+  margin: -0.75rem;
+}
+.spacing-7 {
+  width: calc(100% + 1.75rem);
+  margin: -0.875rem;
+}
+.spacing-8 {
+  width: calc(100% + 2rem);
+  margin: -1rem;
+}
+.spacing-9 {
+  width: calc(100% + 2.25rem);
+  margin: -1.125rem;
+}
+.spacing-10 {
+  width: calc(100% + 2.5rem);
+  margin: -1.25rem;
+}
+.spacing-1 > .item {
+  padding: 0.125rem;
+}
+.spacing-2 > .item {
+  padding: 0.25rem;
+}
+.spacing-3 > .item {
+  padding: 0.375rem;
+}
+.spacing-4 > .item {
+  padding: 0.5rem;
+}
+.spacing-5 > .item {
+  padding: 0.625rem;
+}
+.spacing-6 > .item {
+  padding: 0.75rem;
+}
+.spacing-7 > .item {
+  padding: 0.875rem;
+}
+.spacing-8 > .item {
+  padding: 1rem;
+}
+.spacing-9 > .item {
+  padding: 1.125rem;
+}
+.spacing-10 > .item {
+  padding: 1.25rem;
 }
 
 /* Extra small (xs breakpoint) */
@@ -79,6 +159,7 @@
   .col-sm-6 {
     flex: 0 0 50%;
     width: 50%;
+    margin: -1.5rem;
   }
   .col-sm-7 {
     flex: 0 0 58.33%;
